--- a/setup.cfg
+++ b/setup.cfg
@@ -5,14 +5,14 @@
 
 [metadata]
 name = lm-api
-description = Add a short description here!
+description = Utilities for querying large language models
 author = peter szemraj
 author_email = peterszemraj@gmail.com
-license = MIT
-license_files = LICENSE.txt
+license = Apache License 2.0
+license_files = LICENSE
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/pszemraj/lm-api
 # Add here related links, for example:
 project_urls =
     Documentation = https://pyscaffold.org/
@@ -41,7 +41,7 @@ package_dir =
     =src
 
 # Require a min/specific Python version (comma-separated conditions)
-# python_requires = >=3.8
+python_requires = >=3.7
 
 # Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
 # Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
@@ -49,6 +49,10 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    openai
+    pandas
+    openpyxl
+    tqdm
 
 
 [options.packages.find]
