--- a/setup.cfg
+++ b/setup.cfg
@@ -73,8 +73,8 @@ testing =
 
 [options.entry_points]
 # Add here console scripts like:
-# console_scripts =
-#     script_name = lm_api.module:function
+console_scripts =
+    lm-api = lm_api.query_api:run
 # For example:
 # console_scripts =
 #     fibonacci = lm_api.skeleton:run
